Add bio and pictures and changes to color scheme

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
  </head>
  <body>
      <header>
-     <h1>Quynh Nguyen</h1>
+     <h1 class="page-header">Quynh Nguyen</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="#" target="_blank">Name of project goes here</a>
-            <a href="#" target="_blank">Name of project goes here</a>
-            <a href="#" target="_blank">GitHub</a>
-            <a href="#" target="_blank">LinkedIn</a>
+            <a href="https://pim595.github.io/stylin-with-css/" target="_blank">Stylin' with CSS</a>
+            <a href="https://pim595.github.io/explore-oregon/" target="_blank">Explore Oregon</a>
+            <a href="https://github.com/pim595" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/quynh-n-nguyen521/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
@@ -29,11 +29,13 @@
         </picture>   
        <h2 class="subheader">About Me</h2>
        
-       <p>Bio goes here</p>
+       <p>Welcome to my page!</p>
+       <p>My name is Quynh Nguyen and I am currently a student at Year Up and Seattle Central College in the Application Development track. I graduated from Community College of Philadelphia with an Associate's in Business in 2022. I know HTML, CSS, and Python. My goal is to learn more languages so I can become a Software Developer. I hope to continue my education at the University of Washington to hopefully get a Bachelor's in Computer Science.</p>
+       <p>In my free time, I like to hike, cook, and play video games. I am also a cat lover, I have 3 cats!</p>
 
      <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+          Quynh Nguyen, All Rights Reserved ~ 
           <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
           <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
      </p>
