add selectors link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="https://pim595.github.io/stylin-with-css/" target="_blank">Stylin' with CSS</a>
             <a href="https://pim595.github.io/explore-oregon/" target="_blank">Explore Oregon</a>
+            <a href="https://pim595.github.io/selectors/#multiple" target="_blank">Selectors</a>
             <a href="https://github.com/pim595" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/quynh-n-nguyen521/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
