--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="https://pim595.github.io/css-positioning/" target="_blank">Positioning</a>
             <a href="https://pim595.github.io/time-of-day/" target="_blank">Time of Day</a>
             <a href="https://pim595.github.io/daily-grind/" target="_blank">Daily Grind</a>
+            <a href="https://pim595.github.io/creatures/" target="_blank">Creatures</a>
             <a href="https://github.com/pim595" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/quynh-n-nguyen521/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
